--- a/src/TP5/MAP556_TP5.ipynb
+++ b/src/TP5/MAP556_TP5.ipynb
@@ -641,9 +641,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prix Longstaff-Schwartz = 0.2418\n",
+      "Time: 0.0308 \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#######################################\n",
     "### 4. Prix Longstaff-Schwartz\n",
@@ -672,8 +682,9 @@
     "## - du temps d'arret optimal tau (echantillon tau_m)\n",
     "## - de l'estimateur Longstaff-Schwartz du prix\n",
     "##\n",
-    "\n",
-    "estimateur_LongSchwartz = 0.\n",
+    "tau = tempsArretOptimal(X1, v_1_tilde, K, x0, M)\n",
+    "val = (tau==0)*np.maximum(K-x0,0)+(tau==1)*np.maximum(K-X1,0)+(tau==2)*np.maximum(K-X2,0)\n",
+    "estimateur_LongSchwartz = np.mean(val)\n",
     "###################################################\n",
     " \n",
     "time6 = time()\n",
